fixed too wide body width

--- a/styles/src/style.less
+++ b/styles/src/style.less
@@ -3,6 +3,10 @@
 // @version 0.1.0
 // @author Usability Dynamics
 
+body {
+  overflow-x: hidden;
+}
+
 span.hr {
   display:block;
   height: 1px;
